<resources>
    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>
    <string name="mill">мельница</string>
    <string name="start">старт</string>
    <string name="regulations">правила</string>
    <string name="exit">выход</string>
    <string name="replay">новая игра</string>
    <string name="winner">Вы выиграли!</string>
    <string name="menu">меню</string>
</resources>
