<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1">

    <TextView
        android:id="@+id/mill"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/mill"
        android:textSize="63sp"
        android:textColor="#f0cf2b"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        />

    <Button
        android:id="@+id/buttonStart"
        android:background="@drawable/buttonbackground"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/start"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textColor="#301A04"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/buttonRegulations"
        android:background="@drawable/buttonbackground"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/regulations"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textColor="#301A04"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/buttonExit"
        android:background="@drawable/buttonbackground"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/exit"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textColor="#301A04"
        android:layout_margin="10dp"/>
</LinearLayout>
