<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1">

    <TextView
        android:id="@+id/winner"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/winner"
        android:textSize="45sp"
        android:textColor="#f2ea50"/>

    <Button
        android:id="@+id/buttonReplay"
        android:background="@drawable/buttonbackground"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/replay"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="#301A04"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/buttonMenu"
        android:background="@drawable/buttonbackground"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/menu"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="#301A04"
        android:layout_margin="10dp"/>
</LinearLayout>